css overflow fix

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -158,6 +158,7 @@ button {
   vertical-align: middle;
   animation-name: appear;
   animation-duration: 0.5s;
+  overflow-wrap: break-word;
 
   p, a {
     padding: 2% !important;
